# jas1101_project

./: .gitignore  MANIFEST.in  README.md  README.rst  setup.cfg  setup.py  tox.ini
data/: result.ecsv
data/gcs/: 1636-283_ESO452.ecsv  AM_1.ecsv  Arp_2.ecsv  BH_176.ecsv  BH_261_AL_3.ecsv  Crater.ecsv  Djorg_1.ecsv  Djorg_2_ESO456-.ecsv  ESO-SC06_ESO280.ecsv  E_3.ecsv  Eridanus.ecsv  FSR_1716.ecsv  FSR_1735.ecsv  HP_1_BH_229.ecsv  IC_1257.ecsv  IC_1276_Pal_7.ecsv  IC_4499.ecsv  Lynga_7_BH184.ecsv  NGC_1261.ecsv  NGC_1851.ecsv  NGC_1904_M_79.ecsv  NGC_2298.ecsv  NGC_2419.ecsv  NGC_2808.ecsv  NGC_288.ecsv  NGC_362.ecsv  NGC_4147.ecsv  NGC_4372.ecsv  NGC_4590_M_68.ecsv  NGC_4833.ecsv  NGC_5024_M_53.ecsv  NGC_5053.ecsv  NGC_5272_M_3.ecsv  NGC_5286.ecsv  NGC_5466.ecsv  NGC_5634.ecsv  NGC_5694.ecsv  NGC_5824.ecsv  NGC_5897.ecsv  NGC_5904_M_5.ecsv  (+102 more)
docs/: requirements.txt
jas1101finalproject/: Fit_GC_Pipe.ipynb  GMM.py  GlobularCluster.py  __init__.py  cluster.py  fit.py  plot.py  utils.py  version.py
jas1101finalproject/data/: ABOUT.txt  __init__.py  summary.ecsv
jas1101finalproject/scripts/: __init__.py
licenses/: LICENSE.rst
notebooks/: .galpyrc  Dynesty_GCModel.ipynb  Dynesty_GCpipe.ipynb  Dynesty_GCpipe_NGC6752-M4.ipynb  Dynesty_GCpipe_Tuc47.ipynb  Dynesty_GCpipe_oCen.ipynb  Dynesty_Mock_GCModel.ipynb  Dynesty_ToyModel.ipynb  Fit_Stacking_GC.ipynb  GC_frac_BH_upper_updated.csv  GMM.ipynb  Galpy_Modeling.ipynb  ReadGC+Binning+GMM.ipynb  clustering.ipynb  make_sigr.ipynb  normalize_pm.ipynb  pipeline.ipynb
notebooks/Deriving Velocity Dispersion/: DerivingVelocityDispersion.nb
notebooks/OLD/: GMM.ipynb  ReadGC+Binning+GMM.ipynb
papers/project_proposal/: project_proposal.md
papers_and_presentations/project_proposal/: Choose a Project.txt
scripts/: ABOUT.txt  Analysis_Script.py  __init__.py  run_scripts.py
scripts/analysis/: Analysis_Script.py  __init__.py
scripts/get_globular_clusters/: .gitignore  README  __init__.py  fit_pm_scale.py  format_result.py  format_results.py  query_gaia_archive.py  result.ecsv  result.txt  run_fit.py  run_orbits.py
scripts/normalize_globular_clusters/: __init__.py  clustering.ipynb
src/: ABOUT.txt  GMM.py  GlobularCluster.py  __init__.py  cluster.py  load.py  plot.py  stats.py  utils.py  utils_GMM.py
src/util/: gaussfitter.py
(+296 files in other folders)
